project data generator updated

--- a/notebooks/generate _data/project.ipynb
+++ b/notebooks/generate _data/project.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': '1993-06-09', 'hourly_rate': 14}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': '1996-09-07', 'hourly_rate': 20}]\n[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': datetime.datetime(1993, 6, 9, 0, 0), 'hourly_rate': 32.92}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': datetime.datetime(1996, 9, 7, 0, 0), 'hourly_rate': 37.2}]\n[32.92, 37.2, 26.69, 45.56, 37.57, 44.63, 39.46, 31.05, 30.53, 39.95, 54.36, 35.79, 30.43, 38.62, 29.71, 43.13, 38.78, 41.22, 31.0, 46.5, 44.7, 38.95, 56.46, 32.34, 44.8, 52.86, 41.07, 36.91, 46.32, 27.43, 35.46, 29.73, 24.73, 18.79, 53.41, 45.88, 39.07, 36.63, 39.89, 38.02, 26.99, 32.49, 37.22, 47.13, 41.44, 43.11, 21.92, 42.95, 34.11, 39.71, 46.62, 27.9, 28.0, 30.43, 41.97, 40.94, 44.82, 64.57, 48.2, 41.89, 35.32, 49.41, 41.39, 29.29, 35.41, 46.1, 32.66, 44.26, 37.93, 39.85, 51.28, 46.9, 30.54, 41.31, 36.03, 35.12, 35.25, 41.28, 56.88, 33.95, 21.26, 23.64, 35.28, 54.17, 30.95, 51.68, 40.32, 43.01, 37.11, 40.64, 36.26, 31.45, 39.53, 55.55, 36.8, 28.53, 36.85, 44.89, 27.09, 37.16]\n"
+     ]
+    }
+   ],
    "source": [
     "import pymongo\n",
     "import pandas as pd\n",
@@ -21,23 +29,8 @@
     "\n",
     "client = MongoClient('localhost', 27017)\n",
     "db = client['aion']\n",
-    "collection = db['employee']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': '1993-06-09', 'hourly_rate': 14}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': '1996-09-07', 'hourly_rate': 20}]\n[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': datetime.datetime(1993, 6, 9, 0, 0), 'hourly_rate': 25.910000000000004}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': datetime.datetime(1996, 9, 7, 0, 0), 'hourly_rate': 35.19}]\n[25.91, 35.19, 26.68, 45.56, 37.56, 44.62, 44.86, 31.04, 30.53, 39.94, 52.25, 37.28, 30.42, 38.61, 29.7, 43.12, 41.37, 41.21, 32.49, 38.99, 49.49, 38.94, 56.45, 32.33, 44.79, 47.46, 34.17, 36.9, 46.31, 27.42, 33.75, 29.72, 24.73, 18.78, 60.01, 56.87, 39.06, 36.63, 34.18, 48.52, 26.98, 29.08, 31.21, 35.13, 41.43, 43.11, 21.91, 42.95, 34.1, 39.7, 46.61, 27.89, 27.99, 30.42, 41.96, 46.63, 40.61, 50.07, 48.19, 41.88, 35.31, 49.41, 41.38, 29.28, 33.2, 38.3, 32.66, 44.26, 37.92, 35.64, 57.57, 46.89, 34.73, 44.1, 36.02, 35.12, 40.95, 46.68, 51.67, 33.95, 21.25, 23.63, 35.27, 51.76, 30.94, 51.67, 40.32, 43.0, 37.11, 42.43, 36.25, 31.44, 39.52, 55.54, 35.09, 28.52, 36.84, 44.88, 27.08, 37.15]\n"
-     ]
-    }
-   ],
-   "source": [
+    "collection = db['employee']\n",
+    "\n",
     "ROOT_DIR = os.path.abspath(os.curdir)\n",
     "filename =join(ROOT_DIR, 'data/employee_mock_data.json')\n",
     "if filename:\n",
@@ -66,30 +59,140 @@
     "employee_pay_dct = dict(zip(employee_list,employee_pay))\n",
     "employee_gender_dct = dict(zip(employee_list,employee_gender_lst))\n",
     "employee_age_dct = dict(zip(employee_list,employee_age_lst))\n",
-    "print(employee_pay)\n",
-    "#collection.insert_many(employees)\n"
+    "print(employee_pay)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import gamma\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "def determine_owner(dct1,type):\n",
+    "    owner = random.choice(employee_list)\n",
+    "    gender = employee_gender_dct[owner].lower()\n",
+    "    age = employee_age_dct[owner]\n",
+    "    dct1[type+'_owner'] = owner\n",
+    "    dct1[type+'_owner_gender'] = gender\n",
+    "    dct1[type+'_owner_age'] = age\n",
+    "    return dct1\n",
+    "     \n",
+    " \n",
+    "def determine_delays(dct2,sp,ep,type):\n",
+    "    dct2[type+'_startdate_proposed'] = sp\n",
+    "    dct2[type+'_enddate_proposed'] = ep\n",
+    "\n",
+    "    if type == 'project':\n",
+    "        a = 20\n",
+    "    elif type == 'milestone':\n",
+    "        a = 11\n",
+    "    elif type == 'task':\n",
+    "        a = 2\n",
+    "    \n",
+    "    delay = int(gamma.rvs(a=a, size=1))\n",
+    "    gender = dct2[type+'_owner_gender']\n",
+    "    age = dct2[type+'_owner_age']\n",
+    "    if gender == 'female':\n",
+    "        delay *= .7\n",
+    "    delay = delay * (65 - age)*.02 # older is better\n",
+    "    if delay < 0:\n",
+    "        delay = 0\n",
+    "    sa = sp + timedelta(days=delay)\n",
+    "    txt = type + '_startdate_actual'\n",
+    "    dct2[txt] = sa\n",
+    "    # project_enddate delay\n",
+    "    txt = type + '_enddate_actual'\n",
+    "    \n",
+    "    if type == 'project':\n",
+    "        if s == 'closed':\n",
+    "            delay = int(gamma.rvs(a=a, size=1))\n",
+    "            delay *= random.choice([-1,1,1])\n",
+    "            if gender == 'female':\n",
+    "                delay *= .4\n",
+    "            if delay < 0:\n",
+    "                delay = delay * age*1.4 # older is better\n",
+    "            else:\n",
+    "                delay = delay * (65-age)*.03 # older is better\n",
+    "            \n",
+    "            if delay < 0:\n",
+    "                delay *= -1\n",
+    "            ea = ep + timedelta(days=delay)\n",
+    "            dct2[txt] = ea\n",
+    "            if type in ['project','milestone']:\n",
+    "                dct2[type+'_end_delay'] = (ea - ep).days \n",
+    "            else:\n",
+    "                dct2[type+'_end_delay'] = (ea - ep).days * 8\n",
+    "            dct2[type+'_duration'] = (dct2[type+'_enddate_actual'] - dct2[type+'_startdate_actual']).days\n",
+    "            if type in ['task']:\n",
+    "                dct2[type+'_duration'] *= 8\n",
+    "\n",
+    "        else:\n",
+    "            ea = datetime(2020,1,1,0,0,0)\n",
+    "            dct2[txt] = ea\n",
+    "            dct2[type+'_duration'] = (dct2[type+'_enddate_proposed'] - dct2[type+'_startdate_proposed']).days\n",
+    "            if type in ['task']:\n",
+    "                dct2[type+'_duration'] *= 8\n",
+    "            if type in ['project','milestone']:\n",
+    "                dct2[type+'_end_delay'] = (ea - ep).days \n",
+    "            else:\n",
+    "                dct2[type+'_end_delay'] = (ea - ep).days * 8\n",
+    "\n",
+    "    else:\n",
+    "        delay = int(gamma.rvs(a=a, size=1))\n",
+    "        delay *= random.choice([-1,1,1])\n",
+    "        if gender == 'female':\n",
+    "            delay *= .4\n",
+    "        if delay < 0:\n",
+    "            delay = delay * age*1.4 # older is better\n",
+    "        else:\n",
+    "            delay = delay * (65-age)*.03 # older is better\n",
+    "        \n",
+    "        ea = ep + timedelta(days=delay)\n",
+    "\n",
+    "        if delay < 0:\n",
+    "            delay *= -1\n",
+    "        dct2[txt] = ea\n",
+    "        if type in ['project','milestone']:\n",
+    "            dct2[type+'_end_delay'] = (ea - ep).days \n",
+    "        else:\n",
+    "            dct2[type+'_end_delay'] = (ea - ep).days * 8\n",
+    "        dct2[type+'_duration'] = (dct2[type+'_enddate_actual'] - dct2[type+'_startdate_actual']).days\n",
+    "        if type in ['task']:\n",
+    "            dct2[type+'_duration'] *= 8\n",
+    "\n",
+    "    if type in ['project','milestone']:\n",
+    "        dct2[type+'_start_delay'] = (sa - sp).days \n",
+    "    else:\n",
+    "        dct2[type+'_start_delay'] = (sa - sp).days * 8\n",
+    "    \n",
+    "    \n",
+    "    return dct2\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7f6f96280348>"
+       "<pymongo.results.InsertManyResult at 0x7f41d2575648>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from scipy.stats import gamma\n",
-    "\n",
     "# fill projects\n",
     "collection = db['project_type']\n",
     "dct_type = {\n",
@@ -106,19 +209,14 @@
     "tasks_list = []\n",
     "project_lists = []\n",
     "composite_lst = []\n",
-    "for idx in range(1,5000):\n",
+    "for idx in range(1,6000):\n",
     "    dct = {}\n",
     "    composite={}\n",
-    "    # determine project manager\n",
-    "    manager = random.choice(employee_list)\n",
-    "    manager_gender = employee_gender_dct[manager].lower()\n",
-    "    manager_age = employee_age_dct[manager]\n",
-    "    dct['manager'] = manager\n",
-    "    dct['manager_gender'] = manager_gender\n",
-    "    dct['manager_age'] = manager_age\n",
+    "    type = 'project'\n",
+    "    dct = determine_owner(dct,type)\n",
     "    # generate project type\n",
     "    name = 'Project '+str(idx)\n",
-    "    dct['name'] = name\n",
+    "    dct['project_name'] = name\n",
     "    dct['type'] = random.choice(types)\n",
     "    s = random.choice(['closed','closed','open'])\n",
     "    # generate dates\n",
@@ -126,91 +224,112 @@
     "    days = (datetime.today() - first_date).days\n",
     "    sp = first_date + timedelta(days=random.choice(list(range(0,days))))\n",
     "    \n",
-    "    dct['startdate_proposed'] = sp\n",
-    "    proj_len = int(gamma.rvs(a=60, size=1))\n",
+    "    dct['project_startdate_proposed'] = sp\n",
+    "    proj_len = int(gamma.rvs(a=80, size=1))\n",
     "    if proj_len < 0:\n",
     "        proj_len *= -1\n",
     "    ep = sp + timedelta(days=proj_len)\n",
-    "    dct['enddate_proposed'] = ep\n",
+    "    dct['project_enddate_proposed'] = ep\n",
     "    \n",
     "    s = 'closed'\n",
     "    if ep > datetime.today():\n",
     "        s = 'open'\n",
     "    dct['status'] = s\n",
     "\n",
-    "    delay = int(gamma.rvs(a=3, size=1))\n",
-    "    if manager_gender == 'female':\n",
-    "            delay *= .7\n",
-    "    delay = delay * (65 - manager_age)*.02 # older is better\n",
-    "    if delay < 0:\n",
-    "        delay = 0\n",
-    "    sa = sp + timedelta(days=delay)\n",
-    "    dct['startdate_actual'] = sa\n",
-    "    # enddate delay\n",
-    "    if s == 'closed':\n",
-    "        delay = int(gamma.rvs(a=10, size=1))\n",
-    "        delay *= random.choice([-1,1,1])\n",
-    "        if manager_gender == 'female':\n",
-    "            delay *= .4\n",
-    "        if delay < 0:\n",
-    "            delay = delay * manager_age*1.4 # older is better\n",
-    "        else:\n",
-    "            delay = delay * (65-manager_age)*.03 # older is better\n",
-    "        \n",
-    "        if delay < 0:\n",
-    "            delay *= -1\n",
-    "        dct['enddate_actual'] = ep + timedelta(days=delay)\n",
-    "\n",
-    "    else:\n",
-    "        dct['enddate_actual'] = datetime(2020,1,1,0,0,0)\n",
+    "    dct = determine_delays(dct,sp,ep,type)\n",
     "    \n",
     "    project_lists.append(dct)\n",
     "    \n",
-    "    ####################### tasks\n",
-    "    emps = int(gamma.rvs(a=20, size=1))\n",
-    "    for emp in range(0,emps):\n",
-    "        composite = {}\n",
-    "        dct_tasks = {}\n",
-    "        dct_tasks['project'] =  name\n",
-    "        task_len = proj_len * 8 *.5# hours\n",
-    "        dct_tasks['employee'] = random.choice(employee_list)\n",
+    "    # --- milestones\n",
+    "    # schedule miles stones bases on reducing difference\n",
+    "    # ---------\n",
+    "    proj_rem = (ep - sp).days\n",
+    "    mep = sp\n",
+    "    mcounter=0\n",
+    "    while mep < ep:\n",
+    "        mcounter += 1\n",
+    "        dct_m = {}\n",
+    "        dct_m['milestone_name'] = 'Milestone ' + str(mcounter)\n",
+    "        msp = mep + timedelta(days=random.randint(0,proj_rem)) # proposed start occurs after end of last mileston\n",
+    "        proj_rem = (ep - mep).days #  update proj remain\n",
+    "        mep = msp + timedelta(int(gamma.rvs(a=proj_rem, size=1)))\n",
+    "        if mep > ep:\n",
+    "            mep = ep\n",
+    "        typem = 'milestone'\n",
+    "        dct_m = determine_owner(dct_m,typem)\n",
+    "        dct_m = determine_delays(dct_m,msp,mep,typem)\n",
     "        \n",
-    "        start = sa + timedelta(days=random.choice(list(range(0,int(proj_len*.8)))))\n",
-    "        dct_tasks['start'] = start\n",
-    "        end = start + timedelta(hours= int(gamma.rvs(a=task_len, size=1)))\n",
-    "        if end > dct['enddate_actual']:\n",
-    "            end = dct['enddate_actual']\n",
-    "        dct_tasks['end'] = end\n",
-    "        duration = (dct_tasks['end'] - dct_tasks['start']).days*8\n",
-    "        composite = {\n",
-    "            'project':name,\n",
-    "            'manager':manager,\n",
-    "            'manager_gender':manager_gender,\n",
-    "            'manager_age':manager_age,\n",
-    "            'type':dct['type'],\n",
-    "            'status':dct['status'],\n",
-    "            'startdate_proposed':dct['startdate_proposed'],\n",
-    "            'startdate_actual':dct['startdate_actual'],\n",
-    "            'enddate_proposed':dct['enddate_proposed'],\n",
-    "            'enddate_actual':dct['enddate_actual'],\n",
-    "            'employee':dct_tasks['employee'],\n",
-    "            'gender': employee_gender_dct[dct_tasks['employee']].lower(),\n",
-    "            'start':dct_tasks['start'],\n",
-    "            'end':dct_tasks['end'],\n",
-    "            'task_duration':round(duration,2),\n",
-    "            'remuneration':round(employee_pay_dct[dct_tasks['employee']]*abs(duration),2),\n",
-    "            # find the delay\n",
-    "            'delay_start': (dct['startdate_actual'] - dct['startdate_proposed']).days*8,\n",
-    "            'delay_end':(dct['enddate_actual'] - dct['enddate_proposed']).days*8,\n",
-    "            'project_duration': (dct['enddate_actual'] - dct['startdate_actual']).days\n",
-    "            \n",
-    "        }\n",
-    "        tasks_list.append(dct_tasks)\n",
-    "        composite_lst.append(composite)\n",
+    "        ####################### tasks\n",
+    "        emps = int(gamma.rvs(a=20, size=1))\n",
+    "        for emp in range(0,emps):\n",
+    "            composite = {}\n",
+    "            dct_tasks = {}\n",
+    "            dct_t = {}\n",
+    "            dct_tasks['project'] = name\n",
+    "            task_len = proj_len * 8 *.5# hours\n",
     "\n",
-    "collection_project = db['project']\n",
-    "collection_project.insert_many(project_lists)\n",
-    "collection_workers.insert_many(tasks_list)\n",
+    "            start = dct_m['milestone_startdate_actual'] + timedelta(days=random.choice(list(range(0,int(proj_len*.8)))))\n",
+    "            dct_tasks['start'] = start\n",
+    "            end = start + timedelta(hours= int(gamma.rvs(a=task_len, size=1)))\n",
+    "            if end > dct_m['milestone_enddate_actual']:\n",
+    "                end = dct_m['milestone_enddate_actual']\n",
+    "            \n",
+    "            dct_tasks['end'] = end\n",
+    "\n",
+    "            typet = 'task'\n",
+    "            dct_t = determine_owner(dct_t,typet)\n",
+    "            dct_t = determine_delays(dct_t,start,end,typet)\n",
+    "            duration = (dct_tasks['end'] - dct_tasks['start']).days*8\n",
+    "            composite = {\n",
+    "                'project':name,\n",
+    "                'project_owner':dct['project_owner'],\n",
+    "                'project_owner_gender': dct['project_owner_gender'],\n",
+    "                'project_owner_age':dct['project_owner_age'],\n",
+    "                'type':dct['type'],\n",
+    "                'status':dct['status'],\n",
+    "                'project_startdate_proposed':dct['project_startdate_proposed'],\n",
+    "                'project_startdate_actual':dct['project_startdate_actual'],\n",
+    "                'project_enddate_proposed':dct['project_enddate_proposed'],\n",
+    "                'project_enddate_actual':dct['project_enddate_actual'],\n",
+    "                'project_duration':dct['project_duration'],\n",
+    "                'project_start_delay':dct['project_start_delay'],\n",
+    "                'project_end_delay':dct['project_end_delay'],\n",
+    "\n",
+    "                \n",
+    "                # milestone\n",
+    "                'milestone_name':dct_m['milestone_name'],\n",
+    "                'milestone_owner' : dct_m['milestone_owner'],\n",
+    "                'milestone_owner_gender': dct_m['milestone_owner_gender'],\n",
+    "                'milestone_owner_age':dct_m['milestone_owner_age'],\n",
+    "                'milestone_startdate_proposed':dct_m['milestone_startdate_proposed'],\n",
+    "                'milestone_startdate_actual':dct_m['milestone_startdate_actual'],\n",
+    "                'milestone_enddate_proposed':dct_m['milestone_enddate_proposed'],\n",
+    "                'milestone_enddate_actual':dct_m['milestone_enddate_actual'],\n",
+    "                'milestone_duration':dct_m['milestone_duration'],\n",
+    "                'milestone_start_delay':dct_m['milestone_start_delay'],\n",
+    "                'milestone_end_delay':dct_m['milestone_end_delay'],\n",
+    "                \n",
+    "                'task_name':'Task '+str(emp),\n",
+    "                'task_owner':dct_t['task_owner'],\n",
+    "                'task_owner_gender': employee_gender_dct[dct_t['task_owner']].lower(),\n",
+    "                'task_owner_age': employee_gender_dct[dct_t['task_owner']].lower(),\n",
+    "                'task_startdate_proposed':dct_t['task_startdate_proposed'],\n",
+    "                'task_enddate_proposed':dct_t['task_enddate_proposed'],\n",
+    "                'task_duration':dct_t['task_duration'],\n",
+    "                'task_start_delay':dct_t['task_start_delay'],\n",
+    "                'task_end_delay':dct_t['task_end_delay'],\n",
+    "                \n",
+    "                \n",
+    "                'remuneration':round(employee_pay_dct[dct_t['task_owner']]*abs(dct_t['task_duration']),2),\n",
+    "                \n",
+    "                \n",
+    "            }\n",
+    "            tasks_list.append(dct_tasks)\n",
+    "            composite_lst.append(composite)\n",
+    "\n",
+    "#collection_project = db['project']\n",
+    "#collection_project.insert_many(project_lists)\n",
+    "#collection_workers.insert_many(tasks_list)\n",
     "collection_composite = db['project_composite']\n",
     "collection_composite.insert_many(composite_lst)\n"
    ]
