project data generator milestone age problem fixed, made references in all models

--- a/notebooks/generate _data/project.ipynb
+++ b/notebooks/generate _data/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': '1993-06-09', 'hourly_rate': 14}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': '1996-09-07', 'hourly_rate': 20}]\n[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': datetime.datetime(1993, 6, 9, 0, 0), 'hourly_rate': 32.92}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': datetime.datetime(1996, 9, 7, 0, 0), 'hourly_rate': 37.2}]\n[32.92, 37.2, 26.69, 45.56, 37.57, 44.63, 39.46, 31.05, 30.53, 39.95, 54.36, 35.79, 30.43, 38.62, 29.71, 43.13, 38.78, 41.22, 31.0, 46.5, 44.7, 38.95, 56.46, 32.34, 44.8, 52.86, 41.07, 36.91, 46.32, 27.43, 35.46, 29.73, 24.73, 18.79, 53.41, 45.88, 39.07, 36.63, 39.89, 38.02, 26.99, 32.49, 37.22, 47.13, 41.44, 43.11, 21.92, 42.95, 34.11, 39.71, 46.62, 27.9, 28.0, 30.43, 41.97, 40.94, 44.82, 64.57, 48.2, 41.89, 35.32, 49.41, 41.39, 29.29, 35.41, 46.1, 32.66, 44.26, 37.93, 39.85, 51.28, 46.9, 30.54, 41.31, 36.03, 35.12, 35.25, 41.28, 56.88, 33.95, 21.26, 23.64, 35.28, 54.17, 30.95, 51.68, 40.32, 43.01, 37.11, 40.64, 36.26, 31.45, 39.53, 55.55, 36.8, 28.53, 36.85, 44.89, 27.09, 37.16]\n"
+      "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': '1993-06-09', 'hourly_rate': 14}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': '1996-09-07', 'hourly_rate': 20}]\n[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': datetime.datetime(1993, 6, 9, 0, 0), 'hourly_rate': 32.92}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': datetime.datetime(1996, 9, 7, 0, 0), 'hourly_rate': 37.2}]\n[32.92, 37.2, 26.69, 45.56, 37.57, 38.93, 39.46, 31.05, 30.53, 39.95, 58.56, 40.29, 30.43, 38.62, 29.71, 43.13, 34.88, 41.22, 35.5, 43.5, 37.5, 38.95, 56.46, 30.64, 44.8, 49.26, 41.07, 36.91, 46.32, 27.43, 33.76, 29.73, 24.73, 18.79, 55.61, 50.28, 39.07, 36.63, 34.19, 42.22, 26.99, 29.09, 35.22, 47.13, 41.44, 43.11, 21.92, 42.95, 34.11, 35.21, 46.62, 27.9, 28.0, 30.43, 41.97, 46.64, 44.82, 55.87, 44.0, 41.89, 35.32, 49.41, 41.39, 29.29, 35.41, 38.3, 32.66, 44.26, 37.93, 35.65, 47.08, 46.9, 30.54, 44.11, 36.03, 35.12, 40.95, 50.28, 56.88, 33.95, 21.26, 23.64, 35.28, 51.77, 30.95, 51.68, 40.32, 43.01, 37.11, 40.64, 36.26, 31.45, 39.53, 50.95, 31.7, 28.53, 36.85, 44.89, 27.09, 37.16]\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7f41d2575648>"
+       "<pymongo.results.InsertManyResult at 0x7f3a98c69988>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
     "tasks_list = []\n",
     "project_lists = []\n",
     "composite_lst = []\n",
-    "for idx in range(1,6000):\n",
+    "for idx in range(1,4000):\n",
     "    dct = {}\n",
     "    composite={}\n",
     "    type = 'project'\n",
@@ -225,7 +225,7 @@
     "    sp = first_date + timedelta(days=random.choice(list(range(0,days))))\n",
     "    \n",
     "    dct['project_startdate_proposed'] = sp\n",
-    "    proj_len = int(gamma.rvs(a=80, size=1))\n",
+    "    proj_len = int(gamma.rvs(a=100, size=1))\n",
     "    if proj_len < 0:\n",
     "        proj_len *= -1\n",
     "    ep = sp + timedelta(days=proj_len)\n",
@@ -247,12 +247,18 @@
     "    mep = sp\n",
     "    mcounter=0\n",
     "    while mep < ep:\n",
+    "        #print(proj_rem)\n",
+    "        #print('milestone end:',mep)\n",
+    "        #print('project end:',ep)\n",
+    "\n",
     "        mcounter += 1\n",
     "        dct_m = {}\n",
     "        dct_m['milestone_name'] = 'Milestone ' + str(mcounter)\n",
-    "        msp = mep + timedelta(days=random.randint(0,proj_rem)) # proposed start occurs after end of last mileston\n",
+    "        msp = mep + timedelta(days=1) # proposed start occurs after end of last mileston\n",
     "        proj_rem = (ep - mep).days #  update proj remain\n",
-    "        mep = msp + timedelta(int(gamma.rvs(a=proj_rem, size=1)))\n",
+    "        days =random.randint(0,proj_rem)\n",
+    "        mep = msp + timedelta(days=days)\n",
+    "\n",
     "        if mep > ep:\n",
     "            mep = ep\n",
     "        typem = 'milestone'\n",
@@ -260,8 +266,10 @@
     "        dct_m = determine_delays(dct_m,msp,mep,typem)\n",
     "        \n",
     "        ####################### tasks\n",
-    "        emps = int(gamma.rvs(a=20, size=1))\n",
+    "        emps = int(gamma.rvs(a=10, size=1))\n",
+    "        tcounter = 0\n",
     "        for emp in range(0,emps):\n",
+    "            tcounter += 1\n",
     "            composite = {}\n",
     "            dct_tasks = {}\n",
     "            dct_t = {}\n",
@@ -297,7 +305,7 @@
     "\n",
     "                \n",
     "                # milestone\n",
-    "                'milestone_name':dct_m['milestone_name'],\n",
+    "                'milestone':dct_m['milestone_name'],\n",
     "                'milestone_owner' : dct_m['milestone_owner'],\n",
     "                'milestone_owner_gender': dct_m['milestone_owner_gender'],\n",
     "                'milestone_owner_age':dct_m['milestone_owner_age'],\n",
@@ -309,24 +317,23 @@
     "                'milestone_start_delay':dct_m['milestone_start_delay'],\n",
     "                'milestone_end_delay':dct_m['milestone_end_delay'],\n",
     "                \n",
-    "                'task_name':'Task '+str(emp),\n",
+    "                'task':'Task '+str(tcounter),\n",
     "                'task_owner':dct_t['task_owner'],\n",
     "                'task_owner_gender': employee_gender_dct[dct_t['task_owner']].lower(),\n",
-    "                'task_owner_age': employee_gender_dct[dct_t['task_owner']].lower(),\n",
+    "                'task_owner_age': dct_t['task_owner_age'],\n",
     "                'task_startdate_proposed':dct_t['task_startdate_proposed'],\n",
     "                'task_enddate_proposed':dct_t['task_enddate_proposed'],\n",
     "                'task_duration':dct_t['task_duration'],\n",
     "                'task_start_delay':dct_t['task_start_delay'],\n",
     "                'task_end_delay':dct_t['task_end_delay'],\n",
     "                \n",
-    "                \n",
     "                'remuneration':round(employee_pay_dct[dct_t['task_owner']]*abs(dct_t['task_duration']),2),\n",
-    "                \n",
     "                \n",
     "            }\n",
     "            tasks_list.append(dct_tasks)\n",
     "            composite_lst.append(composite)\n",
-    "\n",
+    "        #print('mcounter:{},tcounter:{}'.format(mcounter,tcounter))\n",
+    "    \n",
     "#collection_project = db['project']\n",
     "#collection_project.insert_many(project_lists)\n",
     "#collection_workers.insert_many(tasks_list)\n",
