--- a/notebooks/generate _data/project.ipynb
+++ b/notebooks/generate _data/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': '1993-06-09', 'hourly_rate': 14}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': '1996-09-07', 'hourly_rate': 20}]\n[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': datetime.datetime(1993, 6, 9, 0, 0), 'hourly_rate': 32.92}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': datetime.datetime(1996, 9, 7, 0, 0), 'hourly_rate': 37.2}]\n[32.92, 37.2, 26.69, 45.56, 37.57, 38.93, 39.46, 31.05, 30.53, 39.95, 58.56, 40.29, 30.43, 38.62, 29.71, 43.13, 34.88, 41.22, 35.5, 43.5, 37.5, 38.95, 56.46, 30.64, 44.8, 49.26, 41.07, 36.91, 46.32, 27.43, 33.76, 29.73, 24.73, 18.79, 55.61, 50.28, 39.07, 36.63, 34.19, 42.22, 26.99, 29.09, 35.22, 47.13, 41.44, 43.11, 21.92, 42.95, 34.11, 35.21, 46.62, 27.9, 28.0, 30.43, 41.97, 46.64, 44.82, 55.87, 44.0, 41.89, 35.32, 49.41, 41.39, 29.29, 35.41, 38.3, 32.66, 44.26, 37.93, 35.65, 47.08, 46.9, 30.54, 44.11, 36.03, 35.12, 40.95, 50.28, 56.88, 33.95, 21.26, 23.64, 35.28, 51.77, 30.95, 51.68, 40.32, 43.01, 37.11, 40.64, 36.26, 31.45, 39.53, 50.95, 31.7, 28.53, 36.85, 44.89, 27.09, 37.16]\n"
+      "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': '1993-06-09', 'hourly_rate': 14}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': '1996-09-07', 'hourly_rate': 20}]\n[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': datetime.datetime(1993, 6, 9, 0, 0), 'hourly_rate': 30.139999999999997}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': datetime.datetime(1996, 9, 7, 0, 0), 'hourly_rate': 41.22}]\n[30.14, 41.22, 26.71, 45.58, 37.59, 44.65, 41.28, 31.07, 30.55, 39.96, 58.57, 32.81, 30.44, 38.64, 29.73, 41.25, 37.49, 41.24, 32.52, 43.51, 44.71, 38.97, 56.48, 27.26, 44.81, 52.88, 45.69, 36.92, 46.33, 27.44, 35.47, 29.75, 24.75, 18.81, 49.03, 45.9, 39.08, 36.65, 43.7, 38.04, 27.01, 32.5, 31.23, 47.15, 41.46, 43.13, 21.94, 42.97, 34.13, 35.22, 46.64, 27.92, 28.02, 30.44, 41.98, 40.95, 43.44, 50.09, 37.72, 41.9, 39.84, 43.13, 41.41, 29.3, 33.23, 51.32, 32.68, 44.28, 37.95, 35.66, 57.6, 46.92, 41.06, 44.13, 36.05, 35.14, 35.27, 50.3, 64.69, 33.97, 21.28, 23.66, 35.3, 58.98, 30.97, 51.7, 40.34, 39.82, 37.13, 46.06, 36.28, 31.47, 39.55, 55.56, 31.72, 28.54, 36.87, 44.91, 27.11, 37.18]\n"
      ]
     }
    ],
@@ -64,15 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.stats import gamma\n",
+    "from scipy.linalg import cholesky\n",
     "import random\n",
     "\n",
     "\n",
+    "    \n",
     "def determine_owner(dct1,type):\n",
     "    owner = random.choice(employee_list)\n",
     "    gender = employee_gender_dct[owner].lower()\n",
@@ -173,21 +175,83 @@
     "    \n",
     "    return dct2\n",
     "    \n",
-    "\n"
+    "def normalize(values, bounds):\n",
+    "    return [bounds['desired']['lower'] + (x - bounds['actual']['lower']) * \n",
+    "            (bounds['desired']['upper'] - bounds['desired']['lower']) / \n",
+    "            (bounds['actual']['upper'] - bounds['actual']['lower']) for x in values]\n",
+    "\n",
+    "def risk_analysis(dct2):\n",
+    "    # Correlation matrix\n",
+    "    dct = {}\n",
+    "    gender = dct2['project_owner_gender']\n",
+    "    # Generate 3 series of normally distributed (Gaussian) numbers\n",
+    "    rnd = np.random.normal(1, 5, size=(3, 3))\n",
+    "   \n",
+    "    solution = random.randrange(35,100)\n",
+    "    lower, upper = 1, 5\n",
+    "    solution = normalize(\n",
+    "        [solution],\n",
+    "        {'actual':{'lower':35,'upper':100},'desired':{'lower':1,'upper':5}}\n",
+    "    ) # \n",
+    "    sol = int(solution[0])\n",
+    "    \n",
+    "    if gender == 'female': # weigh the risk accurately\n",
+    "        corr_mat= np.array([[sol, 0.7, 0.3],\n",
+    "                    [sol, 1.0, 0.5],\n",
+    "                    [random.randrange(35,101), 0.5, 1.0]])\n",
+    "         # Compute the (upper) Cholesky decomposition matrix\n",
+    "        upper_chol = cholesky(corr_mat)\n",
+    "        ans = rnd @ upper_chol\n",
+    "        likelihood = abs(int(ans.item(0,0)))\n",
+    "        severity = abs(int(ans.item(1,0)))\n",
+    "        if likelihood < 1:\n",
+    "            likelihood = 1\n",
+    "        if likelihood > 5:\n",
+    "            likelihood = 5\n",
+    "        flip = {\n",
+    "            1 : 5,\n",
+    "            2 : 4,\n",
+    "            3 : 3,\n",
+    "            4 : 2,\n",
+    "            5 : 1\n",
+    "        }\n",
+    "        likelihood = flip[likelihood] \n",
+    "        if severity < 1:\n",
+    "            severity = 1\n",
+    "        if severity > 5:\n",
+    "            severity = 5\n",
+    "        flip = {\n",
+    "            1 : 5,\n",
+    "            2 : 4,\n",
+    "            3 : 3,\n",
+    "            4 : 2,\n",
+    "            5 : 1\n",
+    "        }\n",
+    "        severity = flip[severity] \n",
+    "    else:\n",
+    "        likelihood = random.randrange(1,6)\n",
+    "        severity = random.randrange(1,6)\n",
+    "\n",
+    "\n",
+    "    dct['solution'] = solution\n",
+    "    dct['likelihood'] = likelihood\n",
+    "    dct['severity'] = severity\n",
+    "    return dct \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7f3a98c69988>"
+       "<pymongo.results.InsertManyResult at 0x7f9dc4869388>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +273,7 @@
     "tasks_list = []\n",
     "project_lists = []\n",
     "composite_lst = []\n",
-    "for idx in range(1,4000):\n",
+    "for idx in range(1,3000):\n",
     "    dct = {}\n",
     "    composite={}\n",
     "    type = 'project'\n",
@@ -246,6 +310,8 @@
     "    proj_rem = (ep - sp).days\n",
     "    mep = sp\n",
     "    mcounter=0\n",
+    "    \n",
+    "    risk_dct = risk_analysis(dct)\n",
     "    while mep < ep:\n",
     "        #print(proj_rem)\n",
     "        #print('milestone end:',mep)\n",
@@ -329,6 +395,11 @@
     "                \n",
     "                'remuneration':round(employee_pay_dct[dct_t['task_owner']]*abs(dct_t['task_duration']),2),\n",
     "                \n",
+    "                # risk \n",
+    "                'solution':risk_dct['solution'],\n",
+    "                'severity':risk_dct['severity'],\n",
+    "                'likelihood':risk_dct['likelihood']\n",
+    "                \n",
     "            }\n",
     "            tasks_list.append(dct_tasks)\n",
     "            composite_lst.append(composite)\n",
@@ -337,7 +408,7 @@
     "#collection_project = db['project']\n",
     "#collection_project.insert_many(project_lists)\n",
     "#collection_workers.insert_many(tasks_list)\n",
-    "collection_composite = db['project_composite']\n",
+    "collection_composite = db['project_composite1']\n",
     "collection_composite.insert_many(composite_lst)\n"
    ]
   },
