--- a/notebooks/generate _data/project.ipynb
+++ b/notebooks/generate _data/project.ipynb
@@ -351,8 +351,7 @@
     "            dct_tasks['end'] = end\n",
     "\n",
     "            typet = 'task'\n",
-    "            dct_t = determine_owner(dct_t,typet)\n",
-    "            dct_t = determine_delays(dct_t,start,end,typet)\n",
+    "a            dct_t = determine_delays(dct_t,start,end,typet)\n",
     "            duration = (dct_tasks['end'] - dct_tasks['start']).days*8\n",
     "            composite = {\n",
     "                'project':name,\n",
