--- a/notebooks/generate _data/sailing_club.ipynb
+++ b/notebooks/generate _data/sailing_club.ipynb
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': '1993-06-09', 'hourly_rate': 14}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': '1996-09-07', 'hourly_rate': 20}]\n",
-      "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': datetime.datetime(1993, 6, 9, 0, 0), 'hourly_rate': 33.040000000000006}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': datetime.datetime(1996, 9, 7, 0, 0), 'hourly_rate': 37.32}]\n",
-      "[33.04, 37.32, 26.81, 45.68, 37.69, 42.85, 41.38, 31.17, 30.65, 40.06, 48.17, 35.91, 30.54, 38.74, 29.83, 41.35, 41.49, 41.34, 35.62, 39.11, 37.61, 39.07, 56.58, 27.36, 44.91, 49.38, 34.29, 37.02, 46.43, 27.54, 30.47, 29.85, 24.85, 18.91, 55.73, 57.0, 39.18, 36.75, 34.3, 48.64, 27.11, 37.7, 37.33, 35.25, 41.56, 43.23, 22.04, 43.07, 34.23, 42.82, 46.74, 28.02, 28.12, 30.54, 42.08, 46.75, 40.74, 58.89, 44.12, 42.0, 35.44, 49.53, 41.51, 29.4, 36.63, 51.42, 32.78, 44.38, 38.05, 42.76, 47.2, 47.02, 30.66, 41.43, 36.15, 35.24, 44.87, 45.0, 59.59, 34.07, 21.38, 23.76, 35.4, 47.08, 31.07, 51.8, 40.44, 47.92, 37.23, 42.56, 36.38, 31.57, 39.65, 44.16, 40.32, 28.64, 36.97, 45.01, 27.21, 37.28]\n"
+      "[{'id': 1, 'name': 'Cindra Serotsky', 'department': 'Marketing', 'title': 'Senior Cost Accountant', 'gender': 'Female', 'dob': datetime.datetime(1993, 6, 9, 0, 0), 'hourly_rate': 30.24}, {'id': 2, 'name': 'Nataline Marples', 'department': 'Business Development', 'title': 'Actuary', 'gender': 'Female', 'dob': datetime.datetime(1996, 9, 7, 0, 0), 'hourly_rate': 35.32}]\n",
+      "[30.24, 35.32, 26.81, 45.68, 37.69, 42.85, 39.58, 31.17, 30.65, 40.06, 48.18, 35.91, 30.54, 38.74, 29.83, 43.25, 37.59, 41.34, 32.62, 46.62, 42.42, 39.07, 56.58, 27.36, 44.91, 47.58, 41.19, 37.02, 46.43, 27.54, 38.97, 29.85, 24.85, 18.91, 53.53, 50.4, 39.19, 36.75, 43.8, 42.34, 27.11, 34.3, 37.34, 35.25, 41.56, 43.23, 22.04, 43.07, 34.23, 42.82, 46.74, 28.02, 28.12, 30.55, 42.08, 46.76, 44.94, 64.69, 42.02, 42.0, 38.44, 49.53, 41.51, 29.41, 35.53, 46.22, 32.78, 44.38, 38.05, 42.76, 53.5, 47.02, 34.86, 40.03, 36.15, 35.24, 39.17, 41.4, 51.8, 34.07, 21.38, 23.76, 35.4, 54.28, 31.07, 51.8, 40.44, 39.92, 37.23, 46.16, 36.38, 31.57, 39.65, 55.66, 35.22, 28.65, 36.97, 45.01, 27.21, 37.28]\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,23 +143,34 @@
     "    'beer':{'carib':7.00,'stag':8.00,'stag':8.00,'deputy':4.00,'deputy':4.00,'deputy':4.00,'deputy':4.00}\n",
     "}\n",
     "\n",
+    "dct3 = {\n",
+    "    'paddle board' : 20.00,\n",
+    "    'chair' : 10.00,\n",
+    "    'umbrella' : 13.00,\n",
+    "    'kayak': 20.00\n",
+    "    \n",
+    "}\n",
+    "\n",
     "import random\n",
     "import string\n",
     "\n",
     "# or a function\n",
-    "def gen_datetime(min_year=2015, max_year=2020):\n",
+    "def gen_datetime(min_year=2016, max_year=2020):\n",
     "    # generate a datetime in format yyyy-mm-dd hh:mm:ss.000000\n",
     "    start = datetime(min_year, 1, 1, 00, 00, 00)\n",
     "    years = max_year - min_year + 1\n",
     "    end = start + timedelta(days=365 * years)\n",
     "    return start + (end - start) * random.random()\n",
     "\n",
-    " \n",
+    "collection_composite = db['bcc_composite']\n",
     "def rental_behaviour(dct1):\n",
     "    item_dct = {}\n",
     "    composite_lst = []\n",
     "    timestamp = gen_datetime()\n",
     "    dct1['visit_start'] = timestamp\n",
+    "\n",
+    "    item_dct['tab_opened_at'] = dct1['visit_start'] + timedelta(minutes=3)\n",
+    "    item_dct['visit_tab_id_rental'] = datetime.strftime(item_dct['tab_opened_at'],DATE_FORMAT_SHORT) +'_'+dct1['registration_no']\n",
     "    visit_len = int(gamma.rvs(a=120, size=1))\n",
     "    if visit_len < 0:\n",
     "        visit_len = 64\n",
@@ -173,34 +184,34 @@
     "    for item in range(0,items_len+1):\n",
     "        for key,value in dct1.items():\n",
     "            item_dct[key] = value\n",
+    "        item_dct['_id'] = ''.join(random.choices(string.ascii_letters + string.digits, k=20))\n",
     "        item_dct['area'] = 'beach rentals'\n",
+    "        \n",
     "        item_dct['item'] = random.choice(['paddle board','kayak','kayak','chair','chair',\n",
     "                                      'chair','chair','chair','chair','chair','umbrella','umbrella','umbrella'])\n",
     "        if item_dct['item'] in ['paddle board','kayak']:\n",
+    "            \n",
     "            item_dct['category'] = 'watersports'\n",
     "        else:\n",
     "            item_dct['category'] = 'relaxation'\n",
+    "        item_dct['rental_tab'] = dct3[item_dct['item']]\n",
+    "        collection_composite.insert_one(item_dct)\n",
     "    return item_dct\n",
     "\n",
     "def bar_behaviour(dct1):\n",
-    "    collection_composite = db['bcc_composite']\n",
     "\n",
     "     # rentals\n",
     "    items_len,employee_dct = determine_sales_behaviour(dct1,'bar')\n",
     "    composite_lst = []\n",
     "    for item in range(0,items_len+1):\n",
     "        item_dct = {}\n",
-    "\n",
-    "        for key,value in dct1.items():\n",
-    "            if key != '_id':\n",
-    "                item_dct[key] = value\n",
-    "        item_dct['tab_opened_at'] = dct1['visit_start'] + timedelta(minutes=10)\n",
-    "        item_dct['visit_tab'] = datetime.strftime(item_dct['tab_opened_at'],\n",
-    "                                                  DATE_FORMAT_SHORT) +'_'+dct1['registration_no']\n",
+    "        item_dct['_id'] = ''.join(random.choices(string.ascii_letters + string.digits, k=20))\n",
+    "        item_dct['tab_opened_at'] = dct1['visit_start'] + timedelta(minutes=40)\n",
+    "        \n",
     "       \n",
     "        item_dct['area'] = 'bar'\n",
     "        item_dct['category'] = random.choice(['food','drink','drink','drink'])\n",
-    "        item_dct['tab'] = 0\n",
+    "        item_dct['bar_tab'] = 0\n",
     "       \n",
     "        item_type = random.choice(list(dct2[item_dct['category']].keys()))\n",
     "        item_dct['comestible_type'] = item_type\n",
@@ -209,11 +220,11 @@
     "        item_dct['item'] = item_name\n",
     "        item_dct['price'] = dct2[item_dct['category']][item_type][item_name] \n",
     "        item_dct['amount'] = random.choice([1,1,1,1,1,2,2,3])\n",
-    "        item_dct['tab'] += item_dct['price'] * item_dct['amount']\n",
+    "        item_dct['bar_tab'] += item_dct['price'] * item_dct['amount']\n",
     "        \n",
     "        item_dct['tab_status'] = random.choice(['closed','closed','closed','open'])\n",
     "        if item_dct['tab_status'] == 'closed':\n",
-    "            item_dct['payment'] = item_dct['tab']\n",
+    "            item_dct['payment'] = item_dct['bar_tab']\n",
     "            item_dct['payment_timestamp'] = dct1['visit_end'] - timedelta(minutes=5)\n",
     "\n",
     "        #composite_lst.append(item_dct)\n",
@@ -222,7 +233,7 @@
     "    \n",
     "\n",
     "counter = 0\n",
-    "while counter < 5000:\n",
+    "while counter < 12000:\n",
     "    dct = {}\n",
     "    dct = determine_visitor(dct)\n",
     "    dct = rental_behaviour(dct)\n",
@@ -272,9 +283,15 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "+++++++++++ "
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -296,7 +313,7 @@
    "version": "3.6.6"
   },
   "toc": {
-   "base_numbering": 1,
+   "base_numbering": 1.0,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
